--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-blue.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="lib/slick-carousel/slick/slick-theme.css">
+    <link rel="stylesheet" href="lib/angular-dropdowns/dist/angular-dropdowns.min.css">
 
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
@@ -23,23 +28,22 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <link rel="stylesheet" href="lib/slick-carousel/slick/slick.css">
-    <link rel="stylesheet" href="lib/slick-carousel/slick/slick-theme.css">
     <!-- <script src="lib/angular/angular.js"></script> -->
     <script src="lib/slick-carousel/slick/slick.js"></script>
     <script src="lib/angular-slick/dist/slick.js"></script>
 
     <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="lib/angular-touch/angular-touch.min.js"></script>
+    <script src="lib/angular-dropdowns/dist/angular-dropdowns.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
   </head>
 
   <body ng-app="starter" class="platform-browser platform-cordova platform-webview">
-      <ion-header-bar class="text-scrolling bar-calm">
-          <h3 class="title">Questo sito è un progetto sperimentale. Rimanete sintonizzati e vedrete come ci divertiamo a migliorare il servizio. <a href="https://github.com/feroda/digitalwishes-ui/issues" target="_blank">Per sviluppatori o web designer che volessero dare una mano guardate qui</a></h3>
-      </ion-header-bar>
+      <div class="bar bar-footer text-scrolling bar-calm bar-margin">
+          <h2 class="title">Questo servizio è un progetto sperimentale <a href="http://www.fabrianodigital.it" target="_blank">#fabrianodigital</a>. Rimanete sintonizzati e vedrete come ci divertiamo a <a href="https://github.com/feroda/digitalwishes-ui/issues" target="_blank">migliorarlo...</a></h2>
+      </div>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
