Allineata la ui con la preview youtube

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -9,6 +9,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-blue.css" rel="stylesheet">
+    <link href="css/youtube.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/slick-carousel/slick/slick.css">
     <link rel="stylesheet" href="lib/slick-carousel/slick/slick-theme.css">
     <link rel="stylesheet" href="lib/angular-dropdowns/dist/angular-dropdowns.min.css">
