Allineata la ui alla versione di Dawid

--- a/ui/index.html
+++ b/ui/index.html
@@ -52,6 +52,9 @@
 
         </ion-tab>
 
+        <!-- Wishers Tab -->
+        <ion-tab title="Wishers" icon-off="present" icon-on="present-active" href="#/app/wishers"></ion-tab>
+
         <!-- Partners Tab -->
         <ion-tab title="Partners" icon-off="partnership" icon-on="partnership-active" href="#/app/partners"></ion-tab>
     </ion-tabs>
